add depreciation batch
